VoiceOver does not track the cursor in the address field, works in edit fields on the web.
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
People
(Reporter: MarcoZ, Assigned: eeejay)
References
Details
(Whiteboard: [Mac2020_2])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
After bug 1654679, the arrow keys now speak the character the caret moves across. However, this does not yet work when in the URL bar. There, it will always only speak the first character as before.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Comment 3•5 years ago
|
||
| bugherder | ||
Comment 4•5 years ago
|
||
The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9172535 [details]
Bug 1655784 - Return correct collapsed selection range on inputs. r?morgan
Beta/Release Uplift Approval Request
- User impact if declined: VoiceOver users will have difficulty entering text in the address field.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a minor two line fix.
- String changes made/needed:
Comment 6•5 years ago
|
||
Comment on attachment 9172535 [details]
Bug 1655784 - Return correct collapsed selection range on inputs. r?morgan
Approved for 81.0b5.
Comment 7•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Hi,
I'm trying to do the uplift verification. Could you please provide me with some str?
Thanks, Flor.
| Reporter | ||
Comment 9•5 years ago
|
||
- Turn on VoiceOver.
- Start Firefox.
- Focus the address bar and start typing something.
- Use left and right arrow and listen to what VoiceOver reads. It should speak the character the cursor passes over. It works on my Nightly as expected.
Description
•