Bug 1655784 - Return correct collapsed selection range on inputs. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D88502